Added testing code for REINFORCE algorithm

--- a/PPO2_Implementation.ipynb
+++ b/PPO2_Implementation.ipynb
@@ -122,6 +122,152 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Please write your code for Exercise 1 in this cell or in as many cells as you want ABOVE this cell.\n",
+    "# You should implement your MC agent here.\n",
+    "# Do NOT delete this cell.\n",
+    "from statistics import mean\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "from torch.distributions import Categorical\n",
+    "\n",
+    "\n",
+    "\n",
+    "class Policynetwork(nn.Module):\n",
+    "    def __init__(self, input_size=4, hidden_size1=16, hidden_size2=8, output_size=9):\n",
+    "        super(Policynetwork, self).__init__()\n",
+    "        # Define your network structure\n",
+    "        self.fc1 = nn.Linear(input_size, hidden_size1)\n",
+    "        self.relu1 = nn.ReLU()\n",
+    "        self.fc2 = nn.Linear(hidden_size1, hidden_size2)\n",
+    "        self.relu2 = nn.ReLU()\n",
+    "        self.fc3 = nn.Linear(hidden_size2, output_size)\n",
+    "        self.softmax = nn.Softmax(dim=-1)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        # Define the forward pass\n",
+    "        x = self.relu1(self.fc1(x))\n",
+    "        x = self.relu2(self.fc2(x))\n",
+    "        logits = self.fc3(x)\n",
+    "        logits = torch.clamp(logits, -10, 10)  # Clip values to avoid overflow\n",
+    "        return self.softmax(logits)\n",
+    "        \n",
+    "\n",
+    "\n",
+    "# YOUR CODE HERE\n",
+    "class MCAgent:\n",
+    "    def __init__(self, env, gamma=0.9, learning_rate=0.1, epsilon = 0.3):\n",
+    "        self.gamma = gamma\n",
+    "        self.env = env\n",
+    "        self.epsilon = epsilon\n",
+    "        self.learning_rate = learning_rate\n",
+    "        \n",
+    "        \n",
+    "    def generate_episode(self, policy_net):        \n",
+    "        # initialised lists and variable\n",
+    "        rewards = []\n",
+    "        next_states = []\n",
+    "        summed_rewards = 0\n",
+    "        actions = []\n",
+    "        \n",
+    "        # reset the env to get initial state\n",
+    "        state = self.env.reset()\n",
+    "        state = torch.tensor(state)\n",
+    "        terminal = False\n",
+    "        episode_reward = 0\n",
+    "\n",
+    "\n",
+    "        print(\"start episode\")\n",
+    "        # generate an entire episode\n",
+    "        while not terminal:\n",
+    "            if random.random() < self.epsilon:  # With probability epsilon, choose a random action\n",
+    "                action = random.choice(self.env.get_actions().copy())\n",
+    "                actions.append(action)\n",
+    "            else:\n",
+    "                state = state.float()\n",
+    "                # we get the action depending on our policy network\n",
+    "                probs = policy_net(state)\n",
+    "                m = Categorical(probs)\n",
+    "                action = m.sample()\n",
+    "                actions.append(action)\n",
+    "                action = action.item()\n",
+    "  \n",
+    "            next_state, reward, terminal = self.env.step(action)\n",
+    "            \n",
+    "            rewards.append(reward)\n",
+    "            next_states.append(torch.tensor(next_state, dtype=torch.float32))\n",
+    "            \n",
+    "            summed_rewards += reward\n",
+    "#             print(summed_rewards)\n",
+    "            state = torch.tensor(next_state)\n",
+    "            \n",
+    "            \n",
+    "    \n",
+    "            if terminal:\n",
+    "                self.epsilon = max(0.01, self.epsilon * 0.995)\n",
+    "                break\n",
+    "        return rewards, next_states, summed_rewards, actions\n",
+    "    \n",
+    "    \n",
+    "    def learn(self, rewards, next_states, actions, policy_net):\n",
+    "        \"\"\"\n",
+    "        After each episode, this function will be called. This function allows the agent to \n",
+    "        calculate the total discounted return from each episode, and append the value into the list that corresponds\n",
+    "        to the first-visited (state, action) tuple in the sample-returns dict.\n",
+    "        \"\"\"\n",
+    "        returns = [0] * len(rewards)\n",
+    "        \n",
+    "        G_t = 0\n",
+    "        for i in reversed(range(len(rewards))):\n",
+    "            G_t = rewards[i] + self.gamma * G_t\n",
+    "            returns[i] = G_t\n",
+    "        \n",
+    "        # convert lists to tensors\n",
+    "        next_states = torch.stack(next_states)\n",
+    "        actions = torch.tensor(actions)\n",
+    "        returns = torch.tensor(returns)\n",
+    "\n",
+    "        # calculate log probs and multiply by returns\n",
+    "        log_probs = torch.log(policy_net(next_states))\n",
+    "        selected_log_probs = log_probs[range(len(actions)), actions]  # Only the log_probs of taken actions\n",
+    "        loss = -torch.sum(selected_log_probs * returns)  # Negative for gradient ascent\n",
+    "        \n",
+    "        optimiser = torch.optim.Adam(policy_net.parameters(), lr=self.learning_rate)\n",
+    "        optimiser.zero_grad()  # Clear previous gradients\n",
+    "        loss.backward()  # Compute new gradients\n",
+    "        optimiser.step()  # Update the parameters\n",
+    "\n",
+    "\n",
+    "num_agents = 20\n",
+    "num_episodes = 150\n",
+    "env = RacetrackEnv()\n",
+    "mc_rewards = []\n",
+    "policy_net = Policynetwork()\n",
+    "\n",
+    "for i in range(num_agents):\n",
+    "    mcagent = MCAgent(env)\n",
+    "    episode_rewards = []\n",
+    "    print(f\"Agent {i + 1}\")\n",
+    "    \n",
+    "    for episode in range(num_episodes):\n",
+    "        # first generate an episode\n",
+    "        rewards, next_states, summed_rewards, actions = mcagent.generate_episode(policy_net)\n",
+    "        \n",
+    "        #learn from that episode\n",
+    "        mcagent.learn(rewards, next_states, actions, policy_net)\n",
+    "        \n",
+    "        episode_rewards.append(summed_rewards)\n",
+    "        \n",
+    "    mc_rewards.append(episode_rewards)\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
