Duplicated cells to potentially start testing on another environement

--- a/REINFORCE_Implementation.ipynb
+++ b/REINFORCE_Implementation.ipynb
@@ -67,6 +67,115 @@
     }
    ],
    "source": [
+    "#Reinforce implementation on cartpole\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "import gym\n",
+    "from matplotlib import pyplot as plt\n",
+    "import time\n",
+    "\n",
+    "\n",
+    "    \n",
+    "env = gym.make('CartPole-v0')\n",
+    "\n",
+    "\n",
+    "#STEP 2: Intialize NN \n",
+    "\n",
+    "obs_size = env.observation_space.shape[0] #Initialize number of observation inputs for NN\n",
+    "action_size = env.action_space.n  #Initialize number of actions for NN\n",
+    "hidden_layer_size = 100\n",
+    "hidden_layer_size2 = 100\n",
+    "\n",
+    "\n",
+    "model = torch.nn.Sequential(\n",
+    "                    torch.nn.Linear(obs_size, hidden_layer_size),\n",
+    "                    torch.nn.ReLU(),\n",
+    "                    torch.nn.Linear(hidden_layer_size, hidden_layer_size2),\n",
+    "                    torch.nn.ReLU(),\n",
+    "                    torch.nn.Linear(hidden_layer_size2, action_size),\n",
+    "                    torch.nn.Softmax(dim=0)\n",
+    "            )\n",
+    "\n",
+    "#STEP 1: Initialize parameters etc.\n",
+    "learning_rate = 0.003 \n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
+    "TRANSITONS = 500\n",
+    "Episodes = 500 #change to run for longer or shorter\n",
+    "gamma = 0.99\n",
+    "reward = []\n",
+    "\n",
+    "#STEP 3: Gain a trajectory of experience \n",
+    "for trajectory in range(Episodes): # Outer loop for generating trajectories\n",
+    "    curr_state = env.reset()[0] #Get current state\n",
+    "    \n",
+    "    done = False\n",
+    "    transitions = [] # list for transitions \n",
+    "    \n",
+    "    for t in range(TRANSITONS): # loop to append each transition info into a list. \n",
+    "        act_prob = model(torch.from_numpy(curr_state).float())\n",
+    "        action = np.random.choice(np.array([0,1]), \n",
+    "                 p=act_prob.data.numpy())\n",
+    "        prev_state = curr_state\n",
+    "        #print(env.step(action))\n",
+    "        curr_state,_, done,_, info = env.step(action) \n",
+    "        \n",
+    "        transitions.append((prev_state, action, t+1)) \n",
+    "        if done: \n",
+    "            break\n",
+    "    reward.append(len(transitions)) #The length of transitions indicates the total reward for cartpole.\n",
+    "    reward_batch = torch.Tensor([r for (s,a,r) in \n",
+    "                   transitions]).flip(dims=(0,)) #flip the rewards in order to use discounting loop\n",
+    "    batch_Gvals =[]\n",
+    "    for i in range(len(transitions)): #this double loop discounts the rewards\n",
+    "        new_Gval=0\n",
+    "        power=0\n",
+    "        for j in range(i,len(transitions)):\n",
+    "             new_Gval=new_Gval+((gamma**power)*reward_batch[j]).numpy()\n",
+    "             power+=1\n",
+    "        batch_Gvals.append(new_Gval)\n",
+    "\n",
+    "    #STEP 4: Calculate loss and update NN. \n",
+    "    expected_returns_batch=torch.FloatTensor(batch_Gvals)\n",
+    "    expected_returns_batch /= expected_returns_batch.max() # normalize expected returns \n",
+    "    state_batch = torch.Tensor([s for (s,a,r) in transitions]) \n",
+    "    action_batch = torch.Tensor([a for (s,a,r) in transitions]) \n",
+    "    pred_batch = model(state_batch) #get the probabilities for the states seen in the episode\n",
+    "    prob_batch = pred_batch.gather(dim=1,index=action_batch #get the probabilities associated with the given action taken for the state\n",
+    "                 .long().view(-1,1)).squeeze() \n",
+    "    \n",
+    "    loss= -torch.sum(torch.log(prob_batch)*expected_returns_batch) #compute the loss as given by REINFORCE \n",
+    "    \n",
+    "    optimizer.zero_grad() #clear the gradients in order to provide room for new gradients\n",
+    "    loss.backward() #calculate gradients.\n",
+    "    optimizer.step() #take step in the direction of new gradient.\n",
+    "    \n",
+    "\n",
+    "def running_mean(x):\n",
+    "    N=50\n",
+    "    kernel = np.ones(N)\n",
+    "    conv_len = x.shape[0]-N\n",
+    "    y = np.zeros(conv_len)\n",
+    "    for i in range(conv_len):\n",
+    "        y[i] = kernel @ x[i:i+N]\n",
+    "        y[i] /= N\n",
+    "    return y\n",
+    "score = np.array(reward)\n",
+    "avg_score = running_mean(score)\n",
+    "plt.figure(figsize=(15,7))\n",
+    "plt.ylabel(\"Trajectory Duration\",fontsize=12)\n",
+    "plt.xlabel(\"Episodes\",fontsize=12)\n",
+    "plt.plot(score, color='gray' , linewidth=1)\n",
+    "plt.plot(avg_score, color='blue', linewidth=3)\n",
+    "plt.scatter(np.arange(score.shape[0]),score, \n",
+    "            color='green' , linewidth=0.3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import numpy as np\n",
     "import torch\n",
     "import gym\n",
