--- a/REINFORCE_DQN_PPO_LUNAR_LANDER.ipynb
+++ b/REINFORCE_DQN_PPO_LUNAR_LANDER.ipynb
@@ -31,7 +31,7 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "import numpy as np\n",
-    "import os\n",
+    "import os \n",
     "import timeit\n",
     "import random \n",
     "\n",
@@ -480,7 +480,7 @@
     "\n",
     "\n",
     "#env = gym.make('LunarLander-v2')\n",
-    "env = gym.make(\"LunarLander-v2\", render_mode=\"human\")\n",
+    "env = gym.make(\"LunarLander-v2\")\n",
     "num_states = env.observation_space.shape[0]\n",
     "num_actions = env.action_space.n\n",
     "agent = DQN(\n",
@@ -504,6 +504,365 @@
     "\n",
     "if str(device) == \"cuda\":\n",
     "    torch.cuda.empty_cache()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#DDQN\n",
+    "\n",
+    "import gymnasium as gym\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import pandas as pd\n",
+    "import random\n",
+    "import numpy as np\n",
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "from itertools import count\n",
+    "from collections import deque, namedtuple\n",
+    "\n",
+    "SEED = 42\n",
+    "is_ipython = 'inline' in matplotlib.get_backend()\n",
+    "if is_ipython:\n",
+    "  from IPython import display\n",
+    "\n",
+    "class DQN(nn.Module):\n",
+    "  def __init__(self, inputs, outputs):\n",
+    "    super().__init__()\n",
+    "\n",
+    "    self.fc1 = nn.Linear(in_features=inputs, out_features=64)\n",
+    "    self.fc2 = nn.Linear(in_features=64, out_features=64)\n",
+    "    self.fc3 = nn.Linear(in_features=64, out_features=64)\n",
+    "    self.fc4 = nn.Linear(in_features=64, out_features=32)\n",
+    "    self.out = nn.Linear(in_features=32, out_features=outputs)\n",
+    "\n",
+    "  def forward(self, x):\n",
+    "    x = F.relu(self.fc1(x))\n",
+    "    x = F.relu(self.fc2(x))\n",
+    "    x = F.relu(self.fc3(x))\n",
+    "    x = F.relu(self.fc4(x))\n",
+    "    x = self.out(x)\n",
+    "    return x\n",
+    "  \n",
+    "Experience = namedtuple(\"Experience\", field_names=[\n",
+    "                      \"state\", \"action\", \"reward\", \"next_state\", \"done\"])\n",
+    "\n",
+    "\n",
+    "class ReplayMemory(object):\n",
+    "  \"\"\"\n",
+    "  Class adapted from PyTorch example:\n",
+    "  https://pytorch.org/tutorials/intermediate/reinforcement_q_learning.html\n",
+    "  \"\"\"\n",
+    "\n",
+    "  def __init__(self, buffer_size, batch_size, seed):\n",
+    "    self.memory = deque(maxlen=buffer_size)\n",
+    "    self.batch_size = batch_size\n",
+    "    self.seed = random.seed(seed)\n",
+    "\n",
+    "  def push(self, state, action, reward, next_state, done):\n",
+    "    self.memory.append(Experience(state, action, reward, next_state, done))\n",
+    "\n",
+    "  def sample(self, device):\n",
+    "    \"\"\" \n",
+    "    Sample a set memories.\n",
+    "    Code adapted from a post from Chanseok Kang:\n",
+    "    https://goodboychan.github.io/python/reinforcement_learning/pytorch/udacity/2021/05/07/DQN-LunarLander.html\n",
+    "    \"\"\"\n",
+    "    experiences = random.sample(self.memory, k=self.batch_size)\n",
+    "    '''\n",
+    "    states = torch.from_numpy(\n",
+    "        np.vstack([e.state for e in experiences if e is not None])).float().to(device)\n",
+    "    actions = torch.from_numpy(\n",
+    "        np.vstack([e.action for e in experiences if e is not None])).long().to(device)\n",
+    "    rewards = torch.from_numpy(\n",
+    "        np.vstack([e.reward for e in experiences if e is not None])).float().to(device)\n",
+    "    next_states = torch.from_numpy(np.vstack(\n",
+    "        [e.next_state for e in experiences if e is not None])).float().to(device)\n",
+    "    dones = torch.from_numpy(np.vstack(\n",
+    "        [e.done for e in experiences if e is not None]).astype(np.uint8)).float().to(device)\n",
+    "    '''\n",
+    "    states, actions, rewards, next_states, dones = zip(*experiences)\n",
+    "    result = []\n",
+    "    for state in states:\n",
+    "        if isinstance(state, np.ndarray):\n",
+    "            result.append(state)\n",
+    "        elif isinstance(state, tuple) and isinstance(state[0], np.ndarray):\n",
+    "            result.append(state[0])\n",
+    "    states = tuple(result)\n",
+    "    states = torch.tensor(np.array(states), dtype=torch.float32, device=device)\n",
+    "    next_states = torch.tensor(np.array(next_states), dtype=torch.float32, device=device)\n",
+    "    actions = torch.tensor(actions, dtype=torch.long, device=device).unsqueeze(1)\n",
+    "    rewards = torch.tensor(rewards, dtype=torch.float32, device=device).unsqueeze(1)\n",
+    "    dones = torch.tensor(dones, dtype=torch.float32, device=device).unsqueeze(1)\n",
+    "    return (states, actions, rewards, next_states, dones)\n",
+    "\n",
+    "  def __len__(self):\n",
+    "    return len(self.memory)\n",
+    "  \n",
+    "\n",
+    "class DQNAgent():\n",
+    "  def __init__(\n",
+    "      self,\n",
+    "      state_vector_length,\n",
+    "      num_actions,\n",
+    "      alpha=.001,\n",
+    "      eps=1,\n",
+    "      eps_decay=0.995,\n",
+    "      eps_min=0.05,\n",
+    "      gamma=0.9,\n",
+    "      batch_size=64,\n",
+    "      seed=None\n",
+    "  ):\n",
+    "    self.num_actions = num_actions\n",
+    "    self.eps = eps\n",
+    "    self.eps_decay = eps_decay\n",
+    "    self.eps_min = eps_min\n",
+    "    self.gamma = gamma\n",
+    "    self.device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "    self.step = 0\n",
+    "    self.policy_net = DQN(state_vector_length, num_actions).to(self.device)\n",
+    "    self.target_net = DQN(state_vector_length, num_actions).to(self.device)\n",
+    "    self.target_net.load_state_dict(self.policy_net.state_dict())\n",
+    "    self.target_net.eval()\n",
+    "    self.optimizer = torch.optim.Adam(\n",
+    "        params=self.policy_net.parameters(), lr=alpha)\n",
+    "\n",
+    "    self.memory = ReplayMemory(100000, batch_size, seed)\n",
+    "\n",
+    "    if seed != None:\n",
+    "      np.random.seed(seed)\n",
+    "\n",
+    "  def select_action(self, s):\n",
+    "    self.step += 1\n",
+    "    if np.random.random() < self.eps:\n",
+    "      action = np.random.randint(0, self.num_actions)\n",
+    "    else:\n",
+    "      action = self._get_best_action(s)\n",
+    "\n",
+    "    return action\n",
+    "\n",
+    "  def _get_best_action(self, s):\n",
+    "    #print(\"Type(s) : \", type(s))\n",
+    "    #print(\"s : \", s)\n",
+    "    if isinstance(s, tuple) and isinstance(s[0], np.ndarray):\n",
+    "        s = s[0]\n",
+    "    with torch.no_grad():\n",
+    "      action = self.policy_net(torch.tensor([s]).to(\n",
+    "          self.device)).argmax(dim=1).to(self.device).item()\n",
+    "    return action\n",
+    "\n",
+    "  def update_q(self, s, a, s_prime, r, done):\n",
+    "    self.memory.push(s, a, r, s_prime, done)\n",
+    "    self.step += 1\n",
+    "\n",
+    "    if done:\n",
+    "      self.eps = max(self.eps_min, self.eps * self.eps_decay)\n",
+    "\n",
+    "    if len(self.memory) > self.memory.batch_size:\n",
+    "      experiences = self.memory.sample(self.device)\n",
+    "      self.learn(experiences)\n",
+    "\n",
+    "  def learn(self, experiences):\n",
+    "    states, actions, rewards, next_states, dones = experiences\n",
+    "\n",
+    "    next_q_values = self.target_net(\n",
+    "        next_states).detach().max(1)[0].unsqueeze(1)\n",
+    "    q_targets = rewards + self.gamma * next_q_values * (1 - dones)\n",
+    "    current_q_values = self.policy_net(states).gather(1, actions)\n",
+    "\n",
+    "    loss = F.mse_loss(current_q_values, q_targets)\n",
+    "    self.optimizer.zero_grad()\n",
+    "    loss.backward()\n",
+    "    self.optimizer.step()\n",
+    "\n",
+    "  def update_target(self):\n",
+    "    self.target_net.load_state_dict(self.policy_net.state_dict())\n",
+    "\n",
+    "  def save_network(self, outfile):\n",
+    "    torch.save(self.policy_net.state_dict(), outfile)\n",
+    "\n",
+    "  def load_network(self, infile):\n",
+    "    self.policy_net.load_state_dict(torch.load(infile))\n",
+    "    self.policy_net.eval()\n",
+    "\n",
+    "class DDQNAgent():\n",
+    "  def __init__(\n",
+    "      self,\n",
+    "      state_vector_length,\n",
+    "      num_actions,\n",
+    "      alpha=.001,\n",
+    "      eps=1,\n",
+    "      eps_decay=0.995,\n",
+    "      eps_min=0.05,\n",
+    "      gamma=0.9,\n",
+    "      batch_size=64,\n",
+    "      seed=None\n",
+    "  ):\n",
+    "    self.num_actions = num_actions\n",
+    "    self.eps = eps\n",
+    "    self.eps_decay = eps_decay\n",
+    "    self.eps_min = eps_min\n",
+    "    self.gamma = gamma\n",
+    "    self.device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "    self.step = 0\n",
+    "    self.policy_net = DQN(state_vector_length, num_actions).to(self.device)\n",
+    "    self.target_net = DQN(state_vector_length, num_actions).to(self.device)\n",
+    "    self.target_net.load_state_dict(self.policy_net.state_dict())\n",
+    "    self.target_net.eval()\n",
+    "    self.optimizer = torch.optim.Adam(\n",
+    "        params=self.policy_net.parameters(), lr=alpha)\n",
+    "\n",
+    "    self.memory = ReplayMemory(100000, batch_size, seed)\n",
+    "\n",
+    "    if seed != None:\n",
+    "      np.random.seed(seed)\n",
+    "\n",
+    "  def select_action(self, s):\n",
+    "    self.step += 1\n",
+    "    if np.random.random() < self.eps:\n",
+    "      action = np.random.randint(0, self.num_actions)\n",
+    "    else:\n",
+    "      action = self._get_best_action(s)\n",
+    "\n",
+    "    return action\n",
+    "\n",
+    "  def _get_best_action(self, s):\n",
+    "    #print(\"Type(s) : \", type(s))\n",
+    "    #print(\"s : \", s)\n",
+    "    if isinstance(s, tuple) and isinstance(s[0], np.ndarray):\n",
+    "        s = s[0]\n",
+    "    with torch.no_grad():\n",
+    "      action = self.policy_net(torch.tensor([s]).to(\n",
+    "          self.device)).argmax(dim=1).to(self.device).item()\n",
+    "    return action\n",
+    "\n",
+    "  def update_q(self, s, a, s_prime, r, done):\n",
+    "    self.memory.push(s, a, r, s_prime, done)\n",
+    "    self.step += 1\n",
+    "\n",
+    "    if done:\n",
+    "      self.eps = max(self.eps_min, self.eps * self.eps_decay)\n",
+    "\n",
+    "    if len(self.memory) > self.memory.batch_size:\n",
+    "      experiences = self.memory.sample(self.device)\n",
+    "      self.learn(experiences)\n",
+    "\n",
+    "  def learn(self, experiences):\n",
+    "    states, actions, rewards, next_states, dones = experiences\n",
+    "    next_actions = self.policy_net(next_states).detach().max(1)[-1].unsqueeze(1)\n",
+    "    next_q_values = self.target_net(next_states).gather(1, next_actions)\n",
+    "    q_targets = rewards + self.gamma * next_q_values * (1 - dones)\n",
+    "    current_q_values = self.policy_net(states).gather(1, actions)\n",
+    "\n",
+    "    loss = F.mse_loss(current_q_values, q_targets)\n",
+    "    self.optimizer.zero_grad()\n",
+    "    loss.backward()\n",
+    "    self.optimizer.step()\n",
+    "\n",
+    "  def update_target(self):\n",
+    "    self.target_net.load_state_dict(self.policy_net.state_dict())\n",
+    "\n",
+    "  def save_network(self, outfile):\n",
+    "    torch.save(self.policy_net.state_dict(), outfile)\n",
+    "\n",
+    "  def load_network(self, infile):\n",
+    "    self.policy_net.load_state_dict(torch.load(infile))\n",
+    "    self.policy_net.eval()\n",
+    "\n",
+    "def moving_average(data, window):\n",
+    "  series = pd.Series(data)\n",
+    "  return series.rolling(window).mean()\n",
+    "'''\n",
+    "def plot_rewards(values):\n",
+    "  plt.figure(2)\n",
+    "  plt.clf()\n",
+    "  plt.xlabel('Episode')\n",
+    "  plt.ylabel('Reward')\n",
+    "  plt.plot(values)\n",
+    "  plt.plot(moving_average(values, 100))\n",
+    "'''    \n",
+    "def plot_rewards(values):\n",
+    "  score = np.array(values)\n",
+    "  avg_score = moving_average(values, 100)\n",
+    "  plt.figure(figsize=(15,7))\n",
+    "  plt.clf()\n",
+    "  plt.ylabel(\"Trajectory Duration\",fontsize=12)\n",
+    "  plt.xlabel(\"Episodes\",fontsize=12)\n",
+    "  plt.plot(score, color='gray' , linewidth=1)\n",
+    "  plt.plot(avg_score, color='blue', linewidth=3)\n",
+    "  plt.scatter(np.arange(score.shape[0]),score, \n",
+    "            color='green' , linewidth=0.3)\n",
+    "\n",
+    "\n",
+    "def plot_multiple_rewards(variable, rewards_dict):\n",
+    "  plt.figure(2)\n",
+    "  plt.clf()\n",
+    "  plt.xlabel('Episode')\n",
+    "  plt.ylabel('Reward')\n",
+    "  for key, rewards in rewards_dict.items():\n",
+    "    plt.plot(rewards, label=f'{variable} = {key}')\n",
+    "  plt.legend()\n",
+    "\n",
+    "def lander_runner(num_episodes, target_update, alpha, eps, eps_decay, gamma, seed, convergence_threshold=200, render=False):\n",
+    "  env = gym.make('LunarLander-v2')\n",
+    "  #env.seed(SEED)\n",
+    "  agent = DDQNAgent(env.observation_space.shape[0], env.action_space.n,\n",
+    "                    alpha=alpha, eps=eps, eps_decay=eps_decay, gamma=gamma, seed=seed)\n",
+    "  rewards = []\n",
+    "\n",
+    "  for e in range(num_episodes):\n",
+    "    cur_observation = env.reset(seed=seed)\n",
+    "    if render:\n",
+    "      env.render()\n",
+    "    episode_reward = 0\n",
+    "    for t in count():\n",
+    "      action = agent.select_action(cur_observation)\n",
+    "      next_observation, reward, terminated, truncated, info = env.step(action)\n",
+    "      done = terminated or truncated\n",
+    "      agent.update_q(cur_observation, action, next_observation, reward, done)\n",
+    "      cur_observation = next_observation\n",
+    "      episode_reward += reward\n",
+    "      if render:\n",
+    "        env.render()\n",
+    "      if done:\n",
+    "        rewards.append(episode_reward)\n",
+    "        #plot_rewards(rewards)\n",
+    "        #plt.pause(0.01)\n",
+    "        print(f'Episode {e}: {episode_reward}')\n",
+    "        if is_ipython:\n",
+    "          display.clear_output(wait=True)\n",
+    "        break\n",
+    "    if e % target_update == 0:\n",
+    "      agent.update_target()\n",
+    "    '''\n",
+    "    if np.all(moving_average(rewards, 100)[-100:] >= convergence_threshold):\n",
+    "      print(f'Solved in {e} episodes.')\n",
+    "      #agent.save_network(f'out\\\\agent.pt')\n",
+    "      break\n",
+    "    '''\n",
+    "  env.close()\n",
+    "  return rewards, agent\n",
+    "\n",
+    "run_rewards, agent = lander_runner(\n",
+    "    num_episodes=1500,\n",
+    "    target_update=6,\n",
+    "    alpha=0.0005,\n",
+    "    eps=1,\n",
+    "    eps_decay=0.99,\n",
+    "    gamma=0.999,\n",
+    "    seed=42,\n",
+    "    convergence_threshold=300\n",
+    ")\n",
+    "\n",
+    "#plot_rewards(run_rewards)\n",
+    "#plt.savefig('out\\\\learning_curve.png')\n"
    ]
   },
   {
